src/main/mt22/parser/.antlr/MT22Parser.py
# Generated from d:\Ki222\PPL\BTL\src\main\mt22\parser\MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'integer'", "'string'", "'boolean'", 
                     "'float'", "'array'", "'break'", "'do'", "'else'", 
                     "'for'", "'function'", "'if'", "'return'", "'while'", 
                     "'void'", "'out'", "'continue'", "'of'", "'inherit'", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'::'", 
                     "'('", "')'", "'['", "']'", "'.'", "','", "';'", "':'", 
                     "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "AUTO", "INT", "STRING", "BOOL", "FLOAT", 
                      "ARR", "BREAK", "DO", "ELSE", "FOR", "FUNCTION", "IF", 
                      "RETURN", "WHILE", "VOID", "OUT", "CONTINUE", "OF", 
                      "INHERIT", "ADD", "SUB", "MUL", "DIV", "MOD", "NOT", 
                      "AND", "OR", "EQUAL", "DIF", "LESS", "BIGGER", "LESSEQUAL", 
                      "MOREEQUAL", "CONCAT", "LRB", "RRB", "LSB", "RSB", 
                      "POINT", "CM", "SM", "CL", "LPB", "RPB", "EQB", "COMMENT", 
                      "COMMENTS", "BOOLEAN", "IDENTIFIER", "INTEGER", "FLOATLITERAL", 
                      "STRINGLITERAL", "WS", "ERROR_TOKEN", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE" ]

    RULE_program = 0
    RULE_decVar = 1
    RULE_decVar1 = 2
    RULE_typeAssign = 3
    RULE_dimen = 4
    RULE_elementType = 5
    RULE_decVar2 = 6
    RULE_varList = 7
    RULE_func = 8
    RULE_decFunc = 9
    RULE_parameter = 10
    RULE_bodyFunction = 11
    RULE_stmt = 12
    RULE_blockStmt = 13
    RULE_stmtList = 14
    RULE_assignStmt = 15
    RULE_ifStmt = 16
    RULE_elseStmt = 17
    RULE_elseIfStmt = 18
    RULE_forStmt = 19
    RULE_whileStmt = 20
    RULE_doWhileStmt = 21
    RULE_continueStmt = 22
    RULE_breakStmt = 23
    RULE_callStmt = 24
    RULE_returnStmt = 25
    RULE_expr = 26
    RULE_expr0 = 27
    RULE_expr1 = 28
    RULE_expr2 = 29
    RULE_expr3 = 30
    RULE_expr4 = 31
    RULE_expr5 = 32
    RULE_expr6 = 33
    RULE_expr7 = 34
    RULE_expr8 = 35
    RULE_literal = 36
    RULE_array = 37
    RULE_literals = 38
    RULE_relationOp = 39
    RULE_logicalOp = 40
    RULE_addingOp = 41
    RULE_muldivOp = 42
    RULE_signOp = 43
    RULE_indexArray = 44
    RULE_funcCall = 45
    RULE_exprList = 46

    ruleNames =  [ "program", "decVar", "decVar1", "typeAssign", "dimen", 
                   "elementType", "decVar2", "varList", "func", "decFunc", 
                   "parameter", "bodyFunction", "stmt", "blockStmt", "stmtList", 
                   "assignStmt", "ifStmt", "elseStmt", "elseIfStmt", "forStmt", 
                   "whileStmt", "doWhileStmt", "continueStmt", "breakStmt", 
                   "callStmt", "returnStmt", "expr", "expr0", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "literal", "array", "literals", "relationOp", "logicalOp", 
                   "addingOp", "muldivOp", "signOp", "indexArray", "funcCall", 
                   "exprList" ]

    EOF = Token.EOF
    AUTO=1
    INT=2
    STRING=3
    BOOL=4
    FLOAT=5
    ARR=6
    BREAK=7
    DO=8
    ELSE=9
    FOR=10
    FUNCTION=11
    IF=12
    RETURN=13
    WHILE=14
    VOID=15
    OUT=16
    CONTINUE=17
    OF=18
    INHERIT=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    MOD=24
    NOT=25
    AND=26
    OR=27
    EQUAL=28
    DIF=29
    LESS=30
    BIGGER=31
    LESSEQUAL=32
    MOREEQUAL=33
    CONCAT=34
    LRB=35
    RRB=36
    LSB=37
    RSB=38
    POINT=39
    CM=40
    SM=41
    CL=42
    LPB=43
    RPB=44
    EQB=45
    COMMENT=46
    COMMENTS=47
    BOOLEAN=48
    IDENTIFIER=49
    INTEGER=50
    FLOATLITERAL=51
    STRINGLITERAL=52
    WS=53
    ERROR_TOKEN=54
    UNCLOSE_STRING=55
    ILLEGAL_ESCAPE=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MT22Parser.EOF, 0)

        def decVar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.DecVarContext)
            else:
                return self.getTypedRuleContext(MT22Parser.DecVarContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MT22Parser.FuncContext)
            else:
                return self.getTypedRuleContext(MT22Parser.FuncContext,i)


        def getRuleIndex(self):
            return MT22Parser.RULE_program




    def program(self):

        localctx = MT22Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 96
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                if la_ == 1:
                    self.state = 94
                    self.decVar()
                    pass

                elif la_ == 2:
                    self.state = 95
                    self.func()
                    pass


                self.state = 98 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==MT22Parser.IDENTIFIER):
                    break

            self.state = 100
            self.match(MT22Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SM(self):
            return self.getToken(MT22Parser.SM, 0)

        def decVar1(self):
            return self.getTypedRuleContext(MT22Parser.DecVar1Context,0)


        def decVar2(self):
            return self.getTypedRuleContext(MT22Parser.DecVar2Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decVar




    def decVar(self):

        localctx = MT22Parser.DecVarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decVar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 102
                self.decVar1()
                pass

            elif la_ == 2:
                self.state = 103
                self.decVar2()
                pass


            self.state = 106
            self.match(MT22Parser.SM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVar1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def EQB(self):
            return self.getToken(MT22Parser.EQB, 0)

        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def decVar1(self):
            return self.getTypedRuleContext(MT22Parser.DecVar1Context,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decVar1




    def decVar1(self):

        localctx = MT22Parser.DecVar1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decVar1)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.match(MT22Parser.IDENTIFIER)
                self.state = 109
                self.match(MT22Parser.CL)
                self.state = 110
                self.typeAssign()
                self.state = 111
                self.match(MT22Parser.EQB)
                self.state = 112
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(MT22Parser.IDENTIFIER)
                self.state = 115
                self.match(MT22Parser.CM)
                self.state = 116
                self.decVar1()
                self.state = 117
                self.match(MT22Parser.CM)
                self.state = 118
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def elementType(self):
            return self.getTypedRuleContext(MT22Parser.ElementTypeContext,0)


        def AUTO(self):
            return self.getToken(MT22Parser.AUTO, 0)

        def ARR(self):
            return self.getToken(MT22Parser.ARR, 0)

        def dimen(self):
            return self.getTypedRuleContext(MT22Parser.DimenContext,0)


        def OF(self):
            return self.getToken(MT22Parser.OF, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_typeAssign




    def typeAssign(self):

        localctx = MT22Parser.TypeAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_typeAssign)
        try:
            self.state = 129
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.INT, MT22Parser.STRING, MT22Parser.BOOL, MT22Parser.FLOAT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.elementType()
                pass
            elif token in [MT22Parser.AUTO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MT22Parser.AUTO)
                pass
            elif token in [MT22Parser.ARR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 124
                self.match(MT22Parser.ARR)
                self.state = 125
                self.dimen()
                self.state = 126
                self.match(MT22Parser.OF)
                self.state = 127
                self.elementType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DimenContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(MT22Parser.LSB, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.INTEGER)
            else:
                return self.getToken(MT22Parser.INTEGER, i)

        def RSB(self):
            return self.getToken(MT22Parser.RSB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.CM)
            else:
                return self.getToken(MT22Parser.CM, i)

        def getRuleIndex(self):
            return MT22Parser.RULE_dimen




    def dimen(self):

        localctx = MT22Parser.DimenContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_dimen)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(MT22Parser.LSB)
            self.state = 132
            self.match(MT22Parser.INTEGER)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MT22Parser.CM:
                self.state = 133
                self.match(MT22Parser.CM)
                self.state = 134
                self.match(MT22Parser.INTEGER)
                self.state = 139
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 140
            self.match(MT22Parser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(MT22Parser.INT, 0)

        def BOOL(self):
            return self.getToken(MT22Parser.BOOL, 0)

        def STRING(self):
            return self.getToken(MT22Parser.STRING, 0)

        def FLOAT(self):
            return self.getToken(MT22Parser.FLOAT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_elementType




    def elementType(self):

        localctx = MT22Parser.ElementTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_elementType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.INT) | (1 << MT22Parser.STRING) | (1 << MT22Parser.BOOL) | (1 << MT22Parser.FLOAT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecVar2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varList(self):
            return self.getTypedRuleContext(MT22Parser.VarListContext,0)


        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_decVar2




    def decVar2(self):

        localctx = MT22Parser.DecVar2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_decVar2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.varList()
            self.state = 145
            self.match(MT22Parser.CL)
            self.state = 146
            self.typeAssign()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def varList(self):
            return self.getTypedRuleContext(MT22Parser.VarListContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_varList




    def varList(self):

        localctx = MT22Parser.VarListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varList)
        try:
            self.state = 152
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(MT22Parser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.match(MT22Parser.IDENTIFIER)
                self.state = 150
                self.match(MT22Parser.CM)
                self.state = 151
                self.varList()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decFunc(self):
            return self.getTypedRuleContext(MT22Parser.DecFuncContext,0)


        def bodyFunction(self):
            return self.getTypedRuleContext(MT22Parser.BodyFunctionContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_func




    def func(self):

        localctx = MT22Parser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_func)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.decFunc()
            self.state = 155
            self.bodyFunction()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFIER)
            else:
                return self.getToken(MT22Parser.IDENTIFIER, i)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def FUNCTION(self):
            return self.getToken(MT22Parser.FUNCTION, 0)

        def LRB(self):
            return self.getToken(MT22Parser.LRB, 0)

        def RRB(self):
            return self.getToken(MT22Parser.RRB, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def VOID(self):
            return self.getToken(MT22Parser.VOID, 0)

        def parameter(self):
            return self.getTypedRuleContext(MT22Parser.ParameterContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_decFunc




    def decFunc(self):

        localctx = MT22Parser.DecFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(MT22Parser.IDENTIFIER)
            self.state = 158
            self.match(MT22Parser.CL)
            self.state = 159
            self.match(MT22Parser.FUNCTION)
            self.state = 162
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.AUTO, MT22Parser.INT, MT22Parser.STRING, MT22Parser.BOOL, MT22Parser.FLOAT, MT22Parser.ARR]:
                self.state = 160
                self.typeAssign()
                pass
            elif token in [MT22Parser.VOID]:
                self.state = 161
                self.match(MT22Parser.VOID)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 164
            self.match(MT22Parser.LRB)
            self.state = 166
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MT22Parser.OUT) | (1 << MT22Parser.INHERIT) | (1 << MT22Parser.IDENTIFIER))) != 0):
                self.state = 165
                self.parameter()


            self.state = 168
            self.match(MT22Parser.RRB)
            self.state = 171
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.INHERIT:
                self.state = 169
                self.match(MT22Parser.INHERIT)
                self.state = 170
                self.match(MT22Parser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MT22Parser.IDENTIFIER, 0)

        def CL(self):
            return self.getToken(MT22Parser.CL, 0)

        def typeAssign(self):
            return self.getTypedRuleContext(MT22Parser.TypeAssignContext,0)


        def INHERIT(self):
            return self.getToken(MT22Parser.INHERIT, 0)

        def OUT(self):
            return self.getToken(MT22Parser.OUT, 0)

        def CM(self):
            return self.getToken(MT22Parser.CM, 0)

        def parameter(self):
            return self.getTypedRuleContext(MT22Parser.ParameterContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameter




    def parameter(self):

        localctx = MT22Parser.ParameterContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_parameter)
        self._la = 0 # Token type
        try:
            self.state = 194
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.INHERIT:
                    self.state = 173
                    self.match(MT22Parser.INHERIT)


                self.state = 177
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 176
                    self.match(MT22Parser.OUT)


                self.state = 179
                self.match(MT22Parser.IDENTIFIER)
                self.state = 180
                self.match(MT22Parser.CL)
                self.state = 181
                self.typeAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 183
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.INHERIT:
                    self.state = 182
                    self.match(MT22Parser.INHERIT)


                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==MT22Parser.OUT:
                    self.state = 185
                    self.match(MT22Parser.OUT)


                self.state = 188
                self.match(MT22Parser.IDENTIFIER)
                self.state = 189
                self.match(MT22Parser.CL)
                self.state = 190
                self.typeAssign()
                self.state = 191
                self.match(MT22Parser.CM)
                self.state = 192
                self.parameter()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_bodyFunction




    def bodyFunction(self):

        localctx = MT22Parser.BodyFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_bodyFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignStmt(self):
            return self.getTypedRuleContext(MT22Parser.AssignStmtContext,0)


        def blockStmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(MT22Parser.IfStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(MT22Parser.ForStmtContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(MT22Parser.WhileStmtContext,0)


        def doWhileStmt(self):
            return self.getTypedRuleContext(MT22Parser.DoWhileStmtContext,0)


        def callStmt(self):
            return self.getTypedRuleContext(MT22Parser.CallStmtContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(MT22Parser.ReturnStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(MT22Parser.BreakStmtContext,0)


        def continueStmt(self):
            return self.getTypedRuleContext(MT22Parser.ContinueStmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stmt




    def stmt(self):

        localctx = MT22Parser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_stmt)
        try:
            self.state = 208
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 198
                self.assignStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 199
                self.blockStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 200
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 201
                self.forStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 202
                self.whileStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 203
                self.doWhileStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 204
                self.callStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 205
                self.returnStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 206
                self.breakStmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 207
                self.continueStmt()
                pass

